Resolve deprecations. Need to wait for paper server.jar to begin testing to see what broke